# tempora

./: .gitignore  README.org
doc/: README.org  tds_000.org
doc/business/business_000/: README.html  README.org
doc/business/business_000/docs/: README.org
web/js/express-with-react/server/: package-lock.json  package.json  server.js
web/py/django/playdate/: .gitignore  README.md
web/py/django/playdate/Milestones/M1/: README.md
web/py/django/playdate/Milestones/M1/Checkpoint1/: README.md
web/py/django/playdate/Milestones/M1/Checkpoint2/: README.md
web/py/django/playdate/application/: .gitignore  README.md
web/py/django/playdate/application/PlayDate/: manage.py
web/py/django/playdate/application/PlayDate/Data/: address.csv  address.json  publicevent.csv  publicevent.json  publicevents.csv  servernotes
web/py/django/playdate/application/PlayDate/events/: forms.py  insertpublicevents.py  models.py  search.py  test.py  urls.py  views.py
web/py/django/playdate/credentials/: README.md  team03-testuser  team03-testuser.pub
web/py/django/single_page_app/single_page_app/index/: forms.py  models.py
web/py/django/single_page_app/single_page_app/single_page_app/: asgi.py  settings.py
web/py/django/svelte/: pyproject.toml
web/py/django/svelte/myapp/: settings.py
web/py/django/templates/: bootstrap.html  bootstrapJS.html  nav.html
web/py/django/templates/ebay/: config.yaml  script.py
web/py/django/templates/ebay/DOC/: documentation.org
web/py/django/templates/ebay/single_page_app/: manage.py
(+112 files in other folders)
