[tool.poetry]
name = "svelte"
version = "0.1.0"
description = ""
authors = ["andrewyjo <andrewyunejo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.3"
whitenoise = "^6.2.0"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
